# nouveaubot

./: .dockerignore  .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml  requirements.txt
ImageMagick-7/: policy.xml
bot/: command_filter.py  handler.py  route.py
bot/handlers/: config_omon.py  cp.py  demotivator.py  omon.py  pin.py  ping.py  start.py  tactical.py
bot/handlers/tactical/: tactical.py  tactical.py.old
bot/utils/: cairo_helpers.py  detect_faces.py  message_data_fetchers.py  misc.py  omon_db.py  pool_executor.py  scale_for_tg.py
static/: omon.sql  sentences.txt
